--- a/Application/Prototype/SadkoProto/SadkoProto/View Controllers/UITopTenQuestionsViewController.xib
+++ b/Application/Prototype/SadkoProto/SadkoProto/View Controllers/UITopTenQuestionsViewController.xib
@@ -19,6 +19,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="fLw-jW-6xp"/>
+                        <outlet property="delegate" destination="-1" id="toY-ut-hG8"/>
+                    </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
